--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Landing Page</title>
 </head>
 <body>
@@ -21,16 +22,48 @@
     </div>
     <!--This is the hero section above fold-->
     <div class="hero-section">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes under the main header. It's a smaller font and the color is lower contrast.</p>
-        <button class="sign-up-cta">Sign up</button>
-        <div class="hero-img">
-            <p>this is a placeholder for an image</p>
-        </div>
+            <div class="hero-left">
+                <h1>This website is awesome</h1>
+                <p class="hero-text">This website has some subtext that goes under the main header. It's a smaller font and the color is lower contrast.</p>
+                <button class="sign-up-cta">Sign up</button>
+            </div>
+            <div class="hero-right">
+                <div class="hero-img">
+                    <p>this is a placeholder for an image</p>
+                </div>
+            </div>
     </div>
+    <!--This is the info box section-->
     <div class="info-boxes">
         <h2>Some random information.</h2>
-        <div></div>
+            <div class="box-1">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box-2">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box-3">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box-4">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+    </div>
+    <!--This is the testimonial section-->
+    <div class="quote">
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will read it. Who knows? All I know is it looks nice.</p>
+        <p class="quote-attrib">Thor, God of Thunder</p>
+    </div>
+    <!--This is the CTA block section-->
+    <div class="cta-section">
+        <h3>Call to action! It's time!</h3>
+        <p class="cta-block-text">Sign up for our product by clicking that button right over there!</p>
+        <button class="sign-up-cta-block">Sign up</button>
+    </div>
+    <!--This is the footer section-->
+    <div class="footer">
+        <p>Copyright © The Odin Project 2026</p>
+    </div>
     
 
 
