--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         </div>
         <div class="nav-right">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
     </div>
     <!--This is the hero section above fold-->
     <div class="hero-section">
+        <div class="hero-inner">
             <div class="hero-left">
                 <h1>This website is awesome</h1>
                 <p class="hero-text">This website has some subtext that goes under the main header. It's a smaller font and the color is lower contrast.</p>
@@ -32,33 +33,45 @@
                     <p>this is a placeholder for an image</p>
                 </div>
             </div>
-    </div>
+         </div>
+    </div>     
     <!--This is the info box section-->
+    <h2>Some random information.</h2>
     <div class="info-boxes">
-        <h2>Some random information.</h2>
-            <div class="box-1">
-                <p>this is some subtext under an illustration or image</p>
+        <div class="box-with-text">
+            <div class="box">
             </div>
-            <div class="box-2">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="box-3">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="box-4">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box-with-text">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box-with-text">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div> 
+        <div class="box-with-text">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
     </div>
     <!--This is the testimonial section-->
     <div class="quote">
         <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will read it. Who knows? All I know is it looks nice.</p>
-        <p class="quote-attrib">Thor, God of Thunder</p>
+        <p class="quote-attrib">- Thor, God of Thunder</p>
     </div>
     <!--This is the CTA block section-->
     <div class="cta-section">
-        <h3>Call to action! It's time!</h3>
-        <p class="cta-block-text">Sign up for our product by clicking that button right over there!</p>
-        <button class="sign-up-cta-block">Sign up</button>
+        <div class="cta-block">
+            <div class="cta-block-left">
+                <h3>Call to action! It's time!</h3>
+                <p class="cta-block-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="cta-block-right">
+                <button class="sign-up-cta-block">Sign up</button>
+            </div>
+        </div>
     </div>
     <!--This is the footer section-->
     <div class="footer">
