Update hero section img and related index HTML

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--This is the header section-->
     <div class="header">
         <div class="logo-left">
-            <p class="logo-placeholder"><a href="./index.html">Header Logo</a></p>
+            <img src="./assets/Brent Palmer placeholder logo.png" alt="">
         </div>
         <div class="nav-right">
             <ul>
@@ -33,7 +33,7 @@
             </div>
             <div class="hero-right">
                 <div class="hero-img">
-                  <img src="assets/brent-placeholder.png" width="300px">
+                  <img src="assets/brent-alt.png" width="300px">
                 </div>
             </div>
          </div>
@@ -117,7 +117,7 @@
     <h3 style="font-size:1.5rem;text-align:center; padding-bottom:70px;">Perform with clarity, confidence, and control.</h3>
       <div class="query-form">
         <form name="send-query" method="POST" data-netlify="true">
-          <input type="hidden" name="form-name" value="send-query">
+          <input type="hidden" name="form-name" value="send-query"/>
          <fieldset>
           <legend class="form-head">What are you interested in?</legend>
           <label><input type="radio" name="topic" value="Performance coaching" required> Performance coaching</label>
