--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--This is the header section-->
     <div class="header">
         <div class="logo-left">
-            <img src="./assets/Brent Palmer placeholder logo.png" alt="">
+            <a href="index.html"><img src="./assets/logo-placeholder.png" style="margin-top:10px;" alt=""></a>
         </div>
         <div class="nav-right">
             <ul>
