--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
     <!--This is the header section-->
     <div class="header">
         <div class="logo-left">
-            <p class="logo-placeholder"><a href="./index.html">Header Logo</a></p>
+            <a href="index.html"><img src="./assets/logo-placeholder.png" style="margin-top:10px;" alt=""></a>
         </div>
         <div class="nav-right">
             <ul>
