Change performance to presentation in H1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="hero-section">
         <div class="hero-inner">
             <div class="hero-left">
-                <h1>Speech and performance coaching.<br>Engage any audience.</h1>
+                <h1>Speech and presentation coaching.<br>Engage any audience.</h1>
                 <p class="hero-text">Grow your communication skills as you develop authentic presence that commands attention.</p>
                 <p class="hero-text">Build public speaking, performance and presentation flair that reliably connects with your audience.</p>
             </div>
