Change Info Box Cards to 3 from 4

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      <h2 style="text-align:center; padding-top:80px">Speak with presence and power.</h2>
      <p style="text-align:center;font-size: 1.25rem;">Explore voice and movement, build confidence, and gain strategies to conquer stage fright:</p>
 <div class="info-boxes">
-  <div class="box-with-text">
+  <!--<div class="box-with-text">
     <div class="box">
 <h3 class="box-head">Performance Coaching</h3>
  <img src="./assets/performance-coaching.jpg" alt="young man auditioning for role">
@@ -68,10 +68,10 @@
       </ul>
     <a href="#get-in-touch" class="sign-up-cta"><span style="font-size:1rem">WORK WITH ME</span></a>
 
-    </div>
+    </div> 
     
   </div>
-
+!-->
   <div class="box-with-text">
       <div class="box">
         <h3 class="box-head">Voice and Speech Coaching</h3>
@@ -104,7 +104,7 @@
       <ul class="star-list">
         <li>Want to help teams communicate?</li>
         <li>Want staff to speak with impact?</li>
-        <li>Lack presence presenting together?</li>
+        <li>Difficulty presenting together?</li>
       </ul>
       <a href="#get-in-touch" class="sign-up-cta"><span style="font-size:1rem">WORK WITH ME</span></a></div>
     </div>
