Add Testimonial + Update Font Size

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     </section>
  <!--This is the testimonial section-->
     <div class="quote">
-        <p class="quote-text">Working with Brent was incredible because ipsum lorem.</p>
-        <p class="quote-attrib">- Testimonial</p>
+        <p class="quote-text">After our first session I could already see massive improvements in my presentation skills and after my second session I can envision a future where I act on stage or perhaps in a film.</p>
+        <p class="quote-attrib">- Sakhu Sibhanda (Influencer | Surfer | Content Creator)</p>
     </div>
     <!--This is the CTA block section commented out until needed
     <div class="cta-section">
