Update FAQ Copy with New Questions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--This is the header section-->
     <div class="header">
         <div class="logo-left">
-            <a href="index.html"><img src="./assets/logo-placeholder.png" style="margin-top:10px;" alt=""></a>
+            <a href="index.html"><img src="./assets/brent-placeholderv2.png" style="margin-top:10px;" alt=""></a>
         </div>
         <div class="nav-right">
             <ul>
@@ -176,23 +176,59 @@
             <div class="wrapper">
                 <div class="faq-content">
                   <details name="faq" open>
-                       <summary><span class="question">How do voice and performance coaching work?</span></summary>
+                       <summary><span class="question">What does a public speaking coach do?</span></summary>
                        <div>
-                        <p>We work one-on-one to reach your goals and address challenges you'd like to overcome. <a href="#">Book an intro call</a> that will help tailor the process to you.</p>
+                        <p>I help individuals develop tools to manage nerves and improve their communication skills, confidence and presentation skills.</p>
                        </div>
                       </details>
                       <details name="faq">
-                        <summary><span class="question">What coaching methods do you use?</span></summary>
+                        <summary><span class="question">How can you help me?</span></summary>
                         <div>
-                        <p>I primarily use [method x] and [method y]. Learn <a href="services">more about services.</a></p>
+                        <p>First, I identify your strengths and challenges. I then create a customised plan and track your progress throughout our sessions, providing feedback and support.</p>
                         </div>
                       </details>
                       <details name="faq">
-                        <summary><span class="question">Where can I learn more about the work you do?</span></summary>
+                        <summary><span class="question">What services and coaching formats do you offer?</span></summary>
                         <div>
-                        <p>Please <a href="/resources">see the resources page</a> for videos and other media.</p>
+                        <p>I offer focused individual coaching (face to face or online) and group workshops. Please <a href="services.html">see the services page</a> for more information.</p>
                         </div>
-                      </details> 
+                      </details>
+                      <details name="faq">
+                        <summary><span class="question">What's the coaching process like?</span></summary>
+                        <div>
+                        <p>After you book an initial consultation and I understand your needs, I'll create a structured plan which includes a recommended number of sessions.</p>
+                        </div>
+                      </details>
+                      <details name="faq">
+                        <summary><span class="question">How long are coaching sessions?</span></summary>
+                        <div>
+                        <p>Typically thirty to sixty minutes, depending on your needs.</p>
+                        </div>
+                      </details>
+                      <details name="faq">
+                        <summary><span class="question">How much does coaching cost?</span></summary>
+                        <div>
+                        <p>It is R800 for a one-hour session. Please <a href ="contact.html">see the booking/contact page</a> for more information.</p>
+                        </div>
+                      </details>
+                      <details name="faq">
+                        <summary><span class="question">Do you offer payment plans?</span></summary>
+                        <div>
+                        <p>We can discuss flexible payment options.</p>
+                        </div>
+                      </details>   
+                      <details name="faq">
+                        <summary><span class="question">How will I know if coaching is working?</span></summary>
+                        <div>
+                        <p>Based on the initial assessment, we'll set measurable goals and track your progress.</p>
+                        </div>
+                      </details>
+                      <details name="faq">
+                        <summary><span class="question">Can you guarantee results?</span></summary>
+                        <div>
+                        <p>Specific outcomes aren't guaranteed. My approach has helped many achieve and even exceed their goals.</p>
+                        </div>
+                      </details>   
                 </div>
              </div> 
          </article>
