--- a/about.html
+++ b/about.html
@@ -7,19 +7,20 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Brent Palmer | Speech and Movement Coaching Services</title>
+    <title>Brent Palmer | Brent's Coaching Background</title>
 </head>
 <body>
     <!--This is the header section-->
-    <div class="header">
+<div class="header">
         <div class="logo-left">
-            <a href="index.html"><img src="./assets/logo-placeholder.png" style="margin-top:10px;" alt=""></a>
+            <a href="index.html"><img src="./assets/brent-placeholderv2.png" style="margin-top:10px;" alt=""></a>
         </div>
         <div class="nav-right">
             <ul>
+                <li><a href="./about.html" style="color:#520C0C">ABOUT</a></li>
                 <li><a href="./services.html">SERVICES</a></li>
-                <li><a href="./contact.html">CONTACT / BOOK</a></li>
-                <li><a href="./about.html">ABOUT</a></li>
+                <li><a href="./testimonials.html">TESTIMONIALS</a></li>
+                <li><a href="./contact.html">BOOK/CONTACT</a></li>
             </ul>
         </div>
     </div>
