--- a/testimonials.html
+++ b/testimonials.html
@@ -7,28 +7,29 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Brent Palmer | Get in Touch | Book Coaching Sessions</title>
+    <title>Brent Palmer | Testimonials | What Coached Speakers Say</title>
 </head>
 <body>
-  <div class="header">
+    <!--This is the header section-->
+<div class="header">
         <div class="logo-left">
             <a href="index.html"><img src="./assets/brent-placeholderv2.png" style="margin-top:10px;" alt=""></a>
         </div>
         <div class="nav-right">
             <ul>
-                <li><a href="./about.html">ABOUT</a></li>
+                <li><a href="./about.html" >ABOUT</a></li>
                 <li><a href="./services.html">SERVICES</a></li>
-                <li><a href="./testimonials.html">TESTIMONIALS</a></li>
-                <li><a href="./contact.html" style="color:#520C0C">BOOK/CONTACT</a></li>
+                <li><a href="./testimonials.html" style="color:#520C0C">TESTIMONIALS</a></li>
+                <li><a href="./contact.html">BOOK/CONTACT</a></li>
             </ul>
         </div>
     </div>
 <div class="hero-section">
         <div class="hero-inner">
             <div class="hero-left">
-                <h1>This will be the contact page.</h1>
-                <p class="hero-text">This page will have TidyCal embed for initial call.</p>
-                <p class="hero-text">Plus contact form and other ways to get in touch.</p>
+                <h1>This will be the Testimonials page.</h1>
+                <p class="hero-text">More context on the page about Brent's background and performance and teaching experience.</p>
+                <p class="hero-text">Good place to embed video as well for further context.</p>
             </div>
             <div class="hero-right"></div>
             </div>
