Separate CSS for Service vs Home Info Box for Granular Control + Wrap 2 by 2 on Home

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h2 style="text-align:center; padding-top:80px">Speak with Power and Ease</h2>
   <p style="text-align:center;font-size: 1.25rem;">Explore voice and movement, build confidence, and gain strategies to conquer stage fright:</p>
 
- <div class="info-boxes">   
+ <div class="home-info-boxes">   
     <div class="box-with-text has-divider">
       <div class="box">
         <h3 class="box-head" style="max-width: 16ch;">Communication Skills</h3>
