--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
         </div>
 </div>
 <div class="box-nav">
-    <section class="info-boxes">
+    <section class="service-nav-boxes">
          <div class="icon-nav-box">
             <div class="box-with-text">
                <h3 class="box-head service">Communication Skills Coaching</h3>
